hphp/hack/test/typecheck/dynamic/obj_get_lvar.php.constraint_method_call.exp
WARN: File "obj_get_lvar.php", line 13, characters 10-21:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `null` which is a subtype of `?Bar`. (Warn[12011])
WARN: File "obj_get_lvar.php", line 14, characters 5-11:
You are using the `?->` operator but this value is always null. It's likely you did not intend this value to be always null. (Warn[12030])
WARN: File "obj_get_lvar.php", line 15, characters 5-23:
You are using the `?->` operator but this value is always null. It's likely you did not intend this value to be always null. (Warn[12030])
WARN: File "obj_get_lvar.php", line 15, characters 6-17:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `null` which is a subtype of `?Bar`. (Warn[12011])
WARN: File "obj_get_lvar.php", line 18, characters 9-10:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "obj_get_lvar.php", line 6, characters 34-40:
  This expression has type `dynamic`
WARN: File "obj_get_lvar.php", line 19, characters 10-11:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "obj_get_lvar.php", line 6, characters 34-40:
  This expression has type `dynamic`
WARN: File "obj_get_lvar.php", line 20, characters 9-10:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "obj_get_lvar.php", line 6, characters 34-40:
  This expression has type `dynamic`
WARN: File "obj_get_lvar.php", line 21, characters 9-10:
Method invoked on a value of type `dynamic` (Warn[12038])
  File "obj_get_lvar.php", line 6, characters 34-40:
  This expression has type `dynamic`
ERROR: File "obj_get_lvar.php", line 8, characters 18-19:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 8, characters 18-19:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 9, characters 18-19:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 9, characters 18-19:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 10, characters 12-13:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 10, characters 12-13:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 11, characters 12-13:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 11, characters 12-13:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 12, characters 12-13:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 12, characters 12-13:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 14, characters 10-11:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 14, characters 10-11:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 15, characters 22-23:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "obj_get_lvar.php", line 15, characters 22-23:
  Did you mean `->x` instead?
ERROR: File "obj_get_lvar.php", line 8, characters 5-19:
Dynamic access of property (Typing[4110])
  File "obj_get_lvar.php", line 8, characters 5-19:
  Expected `dynamic`
  File "obj_get_lvar.php", line 8, characters 10-12:
  Type `Bar` is not a subtype of `dynamic` under dynamic-aware subtyping
ERROR: File "obj_get_lvar.php", line 9, characters 5-19:
Dynamic access of property (Typing[4110])
  File "obj_get_lvar.php", line 9, characters 5-19:
  Expected `dynamic`
  File "obj_get_lvar.php", line 9, characters 10-12:
  Type `Bar` is not a subtype of `dynamic` under dynamic-aware subtyping
ERROR: File "obj_get_lvar.php", line 10, characters 5-13:
Dynamic access of property (Typing[4110])
  File "obj_get_lvar.php", line 10, characters 5-13:
  Expected `dynamic`
  File "obj_get_lvar.php", line 10, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
ERROR: File "obj_get_lvar.php", line 11, characters 5-13:
Dynamic access of property (Typing[4110])
  File "obj_get_lvar.php", line 11, characters 5-13:
  Expected `dynamic`
  File "obj_get_lvar.php", line 11, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
ERROR: File "obj_get_lvar.php", line 12, characters 5-13:
Dynamic access of property (Typing[4110])
  File "obj_get_lvar.php", line 12, characters 5-13:
  Expected `dynamic`
  File "obj_get_lvar.php", line 12, characters 5-9:
  Type `this` is not a subtype of `dynamic` under dynamic-aware subtyping
